// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Search > 検索UIのテスト 1`] = `
<div>
  <div
    class="search-root"
  >
    <div
      class="ais-SearchBox"
    >
      <form
        action=""
        class="ais-SearchBox-form search-input close"
        novalidate=""
        role="search"
      >
        <input
          aria-label="Search"
          autocapitalize="off"
          autocomplete="off"
          autocorrect="off"
          class="ais-SearchBox-input search-input"
          maxlength="512"
          placeholder="Search"
          spellcheck="false"
          type="search"
          value=""
        />
        <button
          class="ais-SearchBox-submit search-button"
          title="Submit the search query"
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="ais-SearchBox-submitIcon search-icon"
            height="10"
            viewBox="0 0 40 40"
            width="10"
          >
            <path
              d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
            />
          </svg>
        </button>
        <button
          class="ais-SearchBox-reset reset-button"
          hidden=""
          title="Clear the search query"
          type="reset"
        >
          <svg
            aria-hidden="true"
            class="ais-SearchBox-resetIcon"
            height="10"
            viewBox="0 0 20 20"
            width="10"
          >
            <path
              d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
            />
          </svg>
        </button>
        <span
          class="ais-SearchBox-loadingIndicator"
          hidden=""
        >
          <svg
            aria-hidden="true"
            aria-label="Results are loading"
            class="ais-SearchBox-loadingIcon"
            height="16"
            stroke="#444"
            viewBox="0 0 38 38"
            width="16"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <g
                stroke-width="2"
                transform="translate(1 1)"
              >
                <circle
                  cx="18"
                  cy="18"
                  r="18"
                  stroke-opacity=".5"
                />
                <path
                  d="M36 18c0-9.94-8.06-18-18-18"
                >
                  <animatetransform
                    attributeName="transform"
                    dur="1s"
                    from="0 18 18"
                    repeatCount="indefinite"
                    to="360 18 18"
                    type="rotate"
                  />
                </path>
              </g>
            </g>
          </svg>
        </span>
      </form>
    </div>
    <div
      class="popover"
      data-testid="search-result"
      style="display: none;"
    >
      <div
        data-testid="search-result-count"
      >
        0
         results
      </div>
      <div
        class="ais-Hits ais-Hits--empty"
      >
        <ol
          class="ais-Hits-list search-result-list"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Search > 検索UIのテスト 2`] = `
<div>
  <div
    class="search-root"
  >
    <div
      class="ais-SearchBox"
    >
      <form
        action=""
        class="ais-SearchBox-form search-input open"
        novalidate=""
        role="search"
      >
        <input
          aria-label="Search"
          autocapitalize="off"
          autocomplete="off"
          autocorrect="off"
          class="ais-SearchBox-input search-input"
          maxlength="512"
          placeholder="Search"
          spellcheck="false"
          type="search"
          value="Bi"
        />
        <button
          class="ais-SearchBox-submit search-button"
          title="Submit the search query"
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="ais-SearchBox-submitIcon search-icon"
            height="10"
            viewBox="0 0 40 40"
            width="10"
          >
            <path
              d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
            />
          </svg>
        </button>
        <button
          class="ais-SearchBox-reset reset-button"
          title="Clear the search query"
          type="reset"
        >
          <svg
            aria-hidden="true"
            class="ais-SearchBox-resetIcon"
            height="10"
            viewBox="0 0 20 20"
            width="10"
          >
            <path
              d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
            />
          </svg>
        </button>
        <span
          class="ais-SearchBox-loadingIndicator"
          hidden=""
        >
          <svg
            aria-hidden="true"
            aria-label="Results are loading"
            class="ais-SearchBox-loadingIcon"
            height="16"
            stroke="#444"
            viewBox="0 0 38 38"
            width="16"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <g
                stroke-width="2"
                transform="translate(1 1)"
              >
                <circle
                  cx="18"
                  cy="18"
                  r="18"
                  stroke-opacity=".5"
                />
                <path
                  d="M36 18c0-9.94-8.06-18-18-18"
                >
                  <animatetransform
                    attributeName="transform"
                    dur="1s"
                    from="0 18 18"
                    repeatCount="indefinite"
                    to="360 18 18"
                    type="rotate"
                  />
                </path>
              </g>
            </g>
          </svg>
        </span>
      </form>
    </div>
    <div
      class="popover"
      data-testid="search-result"
      style="display: block;"
    >
      <div
        data-testid="search-result-count"
      >
        41
         results
      </div>
      <div
        class="ais-Hits"
      >
        <ol
          class="ais-Hits-list search-result-list"
        >
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_sa_permission_from_cli/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Bi
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    gQueryで特定データセットに権限を付与する
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
特定のデータセット、特定サービスアカウントにREADやWRITE権限を与える

\`bq show\`で対象データセットの設定を出力、中身
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_empty_string_array/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Bi
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    gQueryでStringの空配列を生成する
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
[配列関数  |  
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  gQuery  |  Google Cloud](https://cloud.google.com/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  gquery/docs/reference/standard-sql/array_functions?hl=ja)

GENERATE_ARRAYで作るとINT64の空配列になってしまう

\`\`\`sql
SELECT GENERATE_ARRAY(1,0,1) AS tags
\`\`\`

UNIONな
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_cant_use_autodetect/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Bi
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    gQueryのbq load時にautodetectを使えない場合
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
PocketのデータをAPIで取得して
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  gQueryに突っ込もうとしたときの話

GCSにJSONを置いてCLIから\`bq load --autodetect\`でデータをloadしようと
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_date_function/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Bi
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    gQueryの日付を扱う際のメモ
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
よく使うと思われるクエリをメモしておく

\`\`\`sql
SELECT
DATE_TRUNC(CURRENT_DATE(), MONTH) AS first_day, # 月初
LAST_DAY(CURRENT_DATE(), MONTH) AS last_day, # 月末
DATE_TRUNC(DATE_SUB(CURRENT_DATE(), INTERVAL 1
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_sample_data/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Bi
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    gQueryでサンプルデータをサクッと作る
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
簡易的にでもサンプルデータが欲しい場合、わざわざデータを入れ込まなくてもサンプルデータを生成できる

\`\`\`sql
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_date_timezone/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Bi
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    gQueryで日付を扱うときはTimezoneを意識する
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  ムゾーン指定の日付データに変換できるのでこれで対応


                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  gQueryがDATEでよしなにやってくれた結果UTCで解釈すると\`2021-03
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/workflows_logging_bigquery_failed/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Workflowsで Memory usage limit exeeded
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
はてなブログのAPIなど公開のAPIをたたいてそのレスポンスをそのまま
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  gQueryに突っ込むみたいなやつ

プライベート
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/json_to_csv/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    JSONファイルを
                  </span>
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Bi
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    gQueryに読ませJSON型で扱うためにそのままCSVで保存する
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
[Working with JSON data in Standard SQL  |  
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  gQuery  |  Google Cloud](https://cloud.google.com/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  gquery/docs/reference/standard-sql/json-data)

先日
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  gQueryでnative JSON型がプレビューでサポートされた

執筆時点ではload
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/dataportal_experience_date/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    DataPortalで9時区切りの日付カラムを計算フィールドで作成する
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
ただのメモ

Togglから
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  gQueryにデータを突っ込んでいてそれをDataPortal経由でグラフ化している

\`start: 2020-12-25 21:52:30 UTC\`（実際計測し
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/zx_arguments/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    zx使用時のコマンドライン引数のリスト
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
\`\`\`shell
zx query.mjs hoge
[
  '/home/user/.anyenv/envs/nodenv/versions/16.13.0/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  n/node',
  '/home/user/.anyenv/envs/nodenv/versions/16.13.0/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  n/zx',
  'query.mjs',
  'hoge'
]
\`\`\`

普通のnodeスクリプトだと\`process.argv.slice(2)\`でコマン
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/svg2png_with_sharp/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Nodeのsharpでsvgをpngへ変換する
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
SVG出力されたレスポンスをPNGに変換する

\`\`\`javascript
#!/usr/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  n/env zx

const sharp = require('sharp');

const svgText = await fetch('https://localhost:8081/sample.svg').then(res =&gt; res.text())
sharp(Buffer.from(svgText, 'utf-8')).toFile('sample.png
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/tfenv/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    tfenvを使いTerraformのバージョンを切り替える
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  めのツール

### インストール

\`\`\`shell
$ git clone https://github.com/tfutils/tfenv.git ~/.tfenv
$ mkdir ~/.local/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  n
$ ln -s ~/.tfenv/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  n/* ~/.local/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  n
\`\`\`

### PATHへの追加

- .bashrc

\`\`\`
export PATH="$HOME/.tfenv/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  n:$PATH"
\`\`\`

当たり前だ
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/s3_price_per_bucket/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    S3利用料をバケット毎に詳細に出すための情報
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  トをDLする
- [使用状況レポートのダウンロード](https://console.aws.amazon.com/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  lling/home#/reports/usage)
- 次の項目を指定する
    - サービス
    - 使用タイプ
    - オペレ
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/ruby_rmagick_install/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    CentOS7系でのrmagickのインストール
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  2.5.7/lib/ruby/gems/2.5.0/gems/rmagick-2.15.4/ext/RMagick
/home/vagrant/.anyenv/envs/rbenv/versions/2.5.7/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  n/ruby -r ./siteconf20200715-2470-bpwp3n.rb extconf.rb
checking for gcc... yes
checking for Magick-config... no
checking for pkg-config... yes
Package MagickCore
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/vscode_terminal_profile/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    VS Codeのターミナルプロファイル設定
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  16.0
V8: 9.1.269.39-electron.0
OS: Windows_NT x64 10.0.19041
\`\`\`

- settings.json

\`\`\`json
    "terminal.integrated.shell.linux": "/usr/local/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  n/tmux",
\`\`\`

上記のようにlinuxの場合はdefaultでtmuxを起動させたかった
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/lambda_diff/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Lambdaのソースコード差分を取得する
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  のも書いたなと言うことで供養がてら残しておく

- lambda-diff

\`\`\`shell
#!/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  n/bash

# lambda-diff profile FunctionName1 FunctionName2

get_lambda_zip(){
  curl -o /tmp/$2.zip \`aws --profile=$1 lambda get-function --function-name $2 | jq
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/docker_host/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    DOCKER_HOSTを指定してVM外からdockerを操作できるようにする
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  serviceの起動オプションを変える

### 設定

- /usr/lib/systemd/system/docker.service

\`\`\`diff
[Service]
- ExecStart=/usr/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  n/dockerd -H unix://
+ ExecStart=/usr/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  n/dockerd -H tcp://0.0.0.0:2375
\`\`\`

- リロード

\`\`\`shell
systemctl daemon-reload
service docker
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/ansible_install_awscliv2/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    AnsibleでAWS CLI v2をインストールする
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  awscli_version }}.zip
  zip: awscli-{{ awscli_version }}.zip
\`\`\`

- roles/awscli/tasks/main.yml

\`\`\`yaml
---
- name: exist awscli v2
  command: which aws
  environment:
    PATH: "/usr/local/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  n:{{ ansible_env.PATH }}"
  register: exist_awscli
  changed_when: false
  ignore_errors: true

- name: get awscli version
  shell: "aws --version 2&gt;&1 | grep -oP '(?&lt;=aws
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/introduction_jest_and_testing_library_to_gatsby/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Gatsbyのブログにjestとreact-testing-libraryを入れてテスト可能にする
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  感じだった

拡張子を\`ts\` -&gt; \`tsx\`にして次に進めた

\`\`\`
 FAIL  src/components/__tests__/header.tsx
  
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  o
    ✕ renders correctly (2 ms)

  ● 
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  o › renders correctly
                                                                                                                                                                                                    The error below may be caused by using the wrong test environment, see https://jestjs
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/wsl_docker_for_windows/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    WSL2でDockerForWindowsのコマンドを叩く
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  くても良いので決め打ちにした

- /mnt/c/Program\\ Files/Docker/Docker/resources/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  n/docker

\`\`\`bash
#!/usr/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  n/env sh

                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  nary=$(basename "$0")
"$binary.exe" "$@"
\`\`\`

- 実行してみる

\`\`\`
$ /mnt/c/Program\\ Files/Docker/Docker/resources/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  bi
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  n
                </span>
              </span>
            </div>
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search > 検索UIのテスト 3`] = `
<div>
  <div
    class="search-root"
  >
    <div
      class="ais-SearchBox"
    >
      <form
        action=""
        class="ais-SearchBox-form search-input open"
        novalidate=""
        role="search"
      >
        <input
          aria-label="Search"
          autocapitalize="off"
          autocomplete="off"
          autocorrect="off"
          class="ais-SearchBox-input search-input"
          maxlength="512"
          placeholder="Search"
          spellcheck="false"
          type="search"
          value="Big"
        />
        <button
          class="ais-SearchBox-submit search-button"
          title="Submit the search query"
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="ais-SearchBox-submitIcon search-icon"
            height="10"
            viewBox="0 0 40 40"
            width="10"
          >
            <path
              d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
            />
          </svg>
        </button>
        <button
          class="ais-SearchBox-reset reset-button"
          title="Clear the search query"
          type="reset"
        >
          <svg
            aria-hidden="true"
            class="ais-SearchBox-resetIcon"
            height="10"
            viewBox="0 0 20 20"
            width="10"
          >
            <path
              d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
            />
          </svg>
        </button>
        <span
          class="ais-SearchBox-loadingIndicator"
          hidden=""
        >
          <svg
            aria-hidden="true"
            aria-label="Results are loading"
            class="ais-SearchBox-loadingIcon"
            height="16"
            stroke="#444"
            viewBox="0 0 38 38"
            width="16"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <g
                stroke-width="2"
                transform="translate(1 1)"
              >
                <circle
                  cx="18"
                  cy="18"
                  r="18"
                  stroke-opacity=".5"
                />
                <path
                  d="M36 18c0-9.94-8.06-18-18-18"
                >
                  <animatetransform
                    attributeName="transform"
                    dur="1s"
                    from="0 18 18"
                    repeatCount="indefinite"
                    to="360 18 18"
                    type="rotate"
                  />
                </path>
              </g>
            </g>
          </svg>
        </span>
      </form>
    </div>
    <div
      class="popover"
      data-testid="search-result"
      style="display: block;"
    >
      <div
        data-testid="search-result-count"
      >
        12
         results
      </div>
      <div
        class="ais-Hits"
      >
        <ol
          class="ais-Hits-list search-result-list"
        >
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_sa_permission_from_cli/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Big
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Queryで特定データセットに権限を付与する
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
特定のデータセット、特定サービスアカウントにREADやWRITE権限を与える

\`bq show\`で対象データセットの設定を出力、中身
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_empty_string_array/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Big
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    QueryでStringの空配列を生成する
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
[配列関数  |  
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Query  |  Google Cloud](https://cloud.google.com/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  query/docs/reference/standard-sql/array_functions?hl=ja)

GENERATE_ARRAYで作るとINT64の空配列になってしまう

\`\`\`sql
SELECT GENERATE_ARRAY(1,0,1) AS tags
\`\`\`

UNIONな
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_cant_use_autodetect/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Big
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Queryのbq load時にautodetectを使えない場合
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
PocketのデータをAPIで取得して
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Queryに突っ込もうとしたときの話

GCSにJSONを置いてCLIから\`bq load --autodetect\`でデータをloadしようと
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_date_function/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Big
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Queryの日付を扱う際のメモ
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
よく使うと思われるクエリをメモしておく

\`\`\`sql
SELECT
DATE_TRUNC(CURRENT_DATE(), MONTH) AS first_day, # 月初
LAST_DAY(CURRENT_DATE(), MONTH) AS last_day, # 月末
DATE_TRUNC(DATE_SUB(CURRENT_DATE(), INTERVAL 1
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_sample_data/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Big
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Queryでサンプルデータをサクッと作る
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
簡易的にでもサンプルデータが欲しい場合、わざわざデータを入れ込まなくてもサンプルデータを生成できる

\`\`\`sql
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_date_timezone/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Big
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Queryで日付を扱うときはTimezoneを意識する
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  ムゾーン指定の日付データに変換できるのでこれで対応


                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  QueryがDATEでよしなにやってくれた結果UTCで解釈すると\`2021-03
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/workflows_logging_bigquery_failed/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Workflowsで Memory usage limit exeeded
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
はてなブログのAPIなど公開のAPIをたたいてそのレスポンスをそのまま
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Queryに突っ込むみたいなやつ

プライベート
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/json_to_csv/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    JSONファイルを
                  </span>
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Big
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Queryに読ませJSON型で扱うためにそのままCSVで保存する
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
[Working with JSON data in Standard SQL  |  
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Query  |  Google Cloud](https://cloud.google.com/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  query/docs/reference/standard-sql/json-data)

先日
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Queryでnative JSON型がプレビューでサポートされた

執筆時点ではload
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/dataportal_experience_date/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    DataPortalで9時区切りの日付カラムを計算フィールドで作成する
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
ただのメモ

Togglから
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Queryにデータを突っ込んでいてそれをDataPortal経由でグラフ化している

\`start: 2020-12-25 21:52:30 UTC\`（実際計測し
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/algolia_mock_with_msw/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Algoliaのレスポンスをmswでモックして開発ではダミーレスポンスを扱う
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  const handlers = [
  rest.post("https://*.algolia.net/1/indexes/*/queries", (req, res, ctx) =&gt; {
    const empty = query0Words

    const wordCountResponseMap = [
      empty,       // 空
      query1Words, // B
      query2Words, // Bi
      query3Words, // 
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
      query4Words, // 
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Q
      query5Words, // 
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Qu
      query6Words, // 
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Que
      query7Words, // 
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Quer
      query8Words, // 
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Query
    ]

    const bodyString = req.body as string

    if (bodyString.length === 0) {
      return res(ctx.status
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bq_load_with_hive_partition/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Hiveパーティショニングモードでbq load
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  27655304",
  "numLongTermBytes": "0",
  "numLongTermLogicalBytes": "0",
  "numRows": "471",
  "numTotalLogicalBytes": "27655304",
  "schema": {
    "fields": [
      {
        "mode": "NULLABLE",
        "name": "response",
        "type": "JSON"
      },
      {
        "mode": "NULLABLE",
        "name": "dt",
        "type": "DATE"
      }
    ]
  },
  "selfLink": "https://
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  query.googleapis.com/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  query/v2/projects/sample-project/datasets/sample_datalake/tables/test_raw_items",
  "tableReference": {
    "datasetId": "sample_datalake",
    "projectId": "sample-project",
    "tableId": "test_raw
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/start_pocket_api/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    PocketのデータをAPI経由で
                  </span>
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Big
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Queryに取り込む
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  retrieve)

retrieveのAPIの仕様についてはこの辺

## おまけ

ここで得たJSONを
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Queryに放り込んでよしなにやろうとしたが一筋縄では行か
                </span>
              </span>
            </div>
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search > 検索UIのテスト 4`] = `
<div>
  <div
    class="search-root"
  >
    <div
      class="ais-SearchBox"
    >
      <form
        action=""
        class="ais-SearchBox-form search-input close"
        novalidate=""
        role="search"
      >
        <input
          aria-label="Search"
          autocapitalize="off"
          autocomplete="off"
          autocorrect="off"
          class="ais-SearchBox-input search-input"
          maxlength="512"
          placeholder="Search"
          spellcheck="false"
          type="search"
          value="Big"
        />
        <button
          class="ais-SearchBox-submit search-button"
          title="Submit the search query"
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="ais-SearchBox-submitIcon search-icon"
            height="10"
            viewBox="0 0 40 40"
            width="10"
          >
            <path
              d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
            />
          </svg>
        </button>
        <button
          class="ais-SearchBox-reset reset-button"
          title="Clear the search query"
          type="reset"
        >
          <svg
            aria-hidden="true"
            class="ais-SearchBox-resetIcon"
            height="10"
            viewBox="0 0 20 20"
            width="10"
          >
            <path
              d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
            />
          </svg>
        </button>
        <span
          class="ais-SearchBox-loadingIndicator"
          hidden=""
        >
          <svg
            aria-hidden="true"
            aria-label="Results are loading"
            class="ais-SearchBox-loadingIcon"
            height="16"
            stroke="#444"
            viewBox="0 0 38 38"
            width="16"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <g
                stroke-width="2"
                transform="translate(1 1)"
              >
                <circle
                  cx="18"
                  cy="18"
                  r="18"
                  stroke-opacity=".5"
                />
                <path
                  d="M36 18c0-9.94-8.06-18-18-18"
                >
                  <animatetransform
                    attributeName="transform"
                    dur="1s"
                    from="0 18 18"
                    repeatCount="indefinite"
                    to="360 18 18"
                    type="rotate"
                  />
                </path>
              </g>
            </g>
          </svg>
        </span>
      </form>
    </div>
    <div
      class="popover"
      data-testid="search-result"
      style="display: none;"
    >
      <div
        data-testid="search-result-count"
      >
        12
         results
      </div>
      <div
        class="ais-Hits"
      >
        <ol
          class="ais-Hits-list search-result-list"
        >
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_sa_permission_from_cli/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Big
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Queryで特定データセットに権限を付与する
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
特定のデータセット、特定サービスアカウントにREADやWRITE権限を与える

\`bq show\`で対象データセットの設定を出力、中身
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_empty_string_array/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Big
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    QueryでStringの空配列を生成する
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
[配列関数  |  
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Query  |  Google Cloud](https://cloud.google.com/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  query/docs/reference/standard-sql/array_functions?hl=ja)

GENERATE_ARRAYで作るとINT64の空配列になってしまう

\`\`\`sql
SELECT GENERATE_ARRAY(1,0,1) AS tags
\`\`\`

UNIONな
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_cant_use_autodetect/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Big
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Queryのbq load時にautodetectを使えない場合
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
PocketのデータをAPIで取得して
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Queryに突っ込もうとしたときの話

GCSにJSONを置いてCLIから\`bq load --autodetect\`でデータをloadしようと
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_date_function/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Big
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Queryの日付を扱う際のメモ
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
よく使うと思われるクエリをメモしておく

\`\`\`sql
SELECT
DATE_TRUNC(CURRENT_DATE(), MONTH) AS first_day, # 月初
LAST_DAY(CURRENT_DATE(), MONTH) AS last_day, # 月末
DATE_TRUNC(DATE_SUB(CURRENT_DATE(), INTERVAL 1
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_sample_data/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Big
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Queryでサンプルデータをサクッと作る
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
簡易的にでもサンプルデータが欲しい場合、わざわざデータを入れ込まなくてもサンプルデータを生成できる

\`\`\`sql
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bigquery_date_timezone/"
              >
                <span
                  class="ais-Highlight"
                >
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Big
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Queryで日付を扱うときはTimezoneを意識する
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  ムゾーン指定の日付データに変換できるのでこれで対応


                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  QueryがDATEでよしなにやってくれた結果UTCで解釈すると\`2021-03
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/workflows_logging_bigquery_failed/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Workflowsで Memory usage limit exeeded
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
はてなブログのAPIなど公開のAPIをたたいてそのレスポンスをそのまま
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Queryに突っ込むみたいなやつ

プライベート
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/json_to_csv/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    JSONファイルを
                  </span>
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Big
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Queryに読ませJSON型で扱うためにそのままCSVで保存する
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
[Working with JSON data in Standard SQL  |  
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Query  |  Google Cloud](https://cloud.google.com/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  query/docs/reference/standard-sql/json-data)

先日
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Queryでnative JSON型がプレビューでサポートされた

執筆時点ではload
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/dataportal_experience_date/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    DataPortalで9時区切りの日付カラムを計算フィールドで作成する
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
ただのメモ

Togglから
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Queryにデータを突っ込んでいてそれをDataPortal経由でグラフ化している

\`start: 2020-12-25 21:52:30 UTC\`（実際計測し
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/algolia_mock_with_msw/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Algoliaのレスポンスをmswでモックして開発ではダミーレスポンスを扱う
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  const handlers = [
  rest.post("https://*.algolia.net/1/indexes/*/queries", (req, res, ctx) =&gt; {
    const empty = query0Words

    const wordCountResponseMap = [
      empty,       // 空
      query1Words, // B
      query2Words, // Bi
      query3Words, // 
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  
      query4Words, // 
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Q
      query5Words, // 
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Qu
      query6Words, // 
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Que
      query7Words, // 
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Quer
      query8Words, // 
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Query
    ]

    const bodyString = req.body as string

    if (bodyString.length === 0) {
      return res(ctx.status
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/bq_load_with_hive_partition/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Hiveパーティショニングモードでbq load
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  27655304",
  "numLongTermBytes": "0",
  "numLongTermLogicalBytes": "0",
  "numRows": "471",
  "numTotalLogicalBytes": "27655304",
  "schema": {
    "fields": [
      {
        "mode": "NULLABLE",
        "name": "response",
        "type": "JSON"
      },
      {
        "mode": "NULLABLE",
        "name": "dt",
        "type": "DATE"
      }
    ]
  },
  "selfLink": "https://
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  query.googleapis.com/
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  query/v2/projects/sample-project/datasets/sample_datalake/tables/test_raw_items",
  "tableReference": {
    "datasetId": "sample_datalake",
    "projectId": "sample-project",
    "tableId": "test_raw
                </span>
              </span>
            </div>
          </li>
          <li
            class="ais-Hits-item"
          >
            <div
              class="search-result-item"
              data-testid="search-result-item"
            >
              <a
                class="link"
                href="/entries/start_pocket_api/"
              >
                <span
                  class="ais-Highlight"
                >
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    PocketのデータをAPI経由で
                  </span>
                  <mark
                    class="ais-Highlight-highlighted"
                  >
                    Big
                  </mark>
                  <span
                    class="ais-Highlight-nonHighlighted"
                  >
                    Queryに取り込む
                  </span>
                </span>
              </a>
              <br />
              <span
                class="ais-Snippet search-result-item-snippet"
              >
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  retrieve)

retrieveのAPIの仕様についてはこの辺

## おまけ

ここで得たJSONを
                </span>
                <mark
                  class="ais-Snippet-highlighted"
                >
                  Big
                </mark>
                <span
                  class="ais-Snippet-nonHighlighted"
                >
                  Queryに放り込んでよしなにやろうとしたが一筋縄では行か
                </span>
              </span>
            </div>
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;
